Mon Mar 10 10:55:14 2003  George Lebl <jirka@5z.com>

	* lib/number_theory/primes.gel: add MillerRabinTestSure, which
	  tests primes in O((log n)^5) time that is a deterministic
	  algorithm (given Generalized Riemann Hypothesis is true)

Mon Mar 10 10:44:40 2003  George Lebl <jirka@5z.com>

	* lib/number_theorey/primes.gel: improve on the
	  Miller-Rabin test to optimize things a bit and add
	  IsStrongPseudoprimeSub which must already get
	  a and t where n-1 = 2^a * t, so that this doesn't have
	  to be computed over and over.

Wed Mar 05 14:14:41 2003  George Lebl <jirka@5z.com>

	* Release 0.5.3

Wed Mar 05 14:13:03 2003  George Lebl <jirka@5z.com>

	* src/eval.c, src/parseutil.c: when expanding matrices treat nulls
	  as empty matrices to allow easy appending, prepending and all such
	  stuff.

	* src/calc.c: be anal on printing numbers with powers and factorials
	  so that the output is genius parsable

Sat Mar 01 10:03:32 2003  George Lebl <jirka@5z.com>

	* src/funclib.c: on setting FloatPrecision actually break e and
	  GoldenRatio caches to recalculate (reread) these

Sat Mar 01 09:55:23 2003  George Lebl <jirka@5z.com>

	* src/mpwrap.c: rational powers now use mpz_root to return an integer
	  if possible.

	* lib/number_theory/misc.gel: remove SymbolicNthRoot and do smarter
	  IsNthRoot given the new usage of powers

Fri Feb 28 13:32:46 2003  George Lebl <jirka@5z.com>

	* src/graphing.c: play with graph colors, make graph lines 1.5 thick,
	  add a plot progress indicator

	* src/mpwrap.c: fix conversions to int and rational from float

	* doc/manual.txt: add a note about unitary minus

Fri Feb 28 11:55:15 2003  George Lebl <jirka@5z.com>

	* src/genius.c, src/gnome-genius.c: raise precision back to 256
	  bits as mpfr is blazing fast on that as well.

Fri Feb 28 11:11:56 2003  George Lebl <jirka@5z.com>

	* src/mpwrap.[ch], configure.in, src/Makefile.am:  If MPFR is present
	  use it for functions like sin, cos, atan, pow, log, exp.  This