@@ -128,6 +128,7 @@ GelETree * gel_makenum_d (double num);
 GelETree * gel_makenum_null(void);
 GelETree * gel_makenum_identifier (GelToken *id);
 GelETree * gel_makenum_string (const char *str);
+GelETree * gel_makenum_string_use (char *str);
 /* FIXME: implement GelETree * gel_makenum_polynomial (...); */
 GelETree * makeoperator(int oper, GSList **stack);
 
