@@ -534,3 +534,10 @@ a=1;(-a)^2							1
 [1,0;2,null]							[1,0;2,0]
 [null,[1;2]]							[1;2]
 [null,[1;2],3]							[1,3;2,3]
+StringToASCII ("sdfsdf")					[115,100,102,115,100,102]
+ASCIIToString ([115,100,102,115,100,102])			"sdfsdf"
+StringToASCII ("")+1						((null)+1)
+ASCIIToString (null)						""
+AlphabetToString ([1,2,3],"abcd")				"bcd"
+AlphabetToString (null,"abcd")					""
+StringToAlphabet ("bbc","abcd")					[1,1,2]
